
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 24a
  * in tools/cathode.c
    - added a new flag -mui so that the ion mobility can be specified at the command line
  * in bin/Broslawski.wrp
    - made small changes to make the control file compatible with the latest changes to the
      rodriguez2024 chemical solver
      

2024 JUN 23a
  * in model/chem/_Air_Plasma_8s/chem.c
    - added TOWNSENDIMPLICIT 
  * in model/chem/_Air_Plasma_8s/macheret2007.c, model/chem/_Air_Plasma_8s/rajendran2022.c,
    and model/chem/_Air_Plasma_8s/rodriguez2024.c
    - only linearize the first two Townsend ionization reactions if TOWNSENDIMPLICIT is TRUE
    

2024 JUN 21b
  * in README
    - updated the text
  * in lib/latex
    - updated the CFDWARP logo
    

2024 JUN 21a
  * in model/chem/_NH3_Plasma_32s/
    - added arakoni2007v4.c
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - reverted to a simpler model where the H- ion production is not taken from Bacal except
      for the excited states reactions
      

2024 JUN 20e
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - incorporated the H- production reactions from Arakoni to Bacal
    

2024 JUN 20d
  * in src/test.c
    - in print_column_species_names() and print_column_charged_species_names()
      added the parameter char *firstcoltitle


2024 JUN 20c
  * in model/chem/_Air_Plasma_11s/chem.c
    - changed call from find_EoverN_from_Te() to _EoverN_from_rhok_Te()
    - changed call from find_Te_from_EoverN() to _Te_from_rhok_EoverN()
  * in model/chem/_H2_Air_Plasma_13s/chem.c
    - changed call from find_EoverN_from_Te() to _EoverN_from_rhok_Te()
  * in model/chem/_N2_Plasma_8s/chem.c
    - changed call from find_Te_from_EoverN() to _Te_from_rhok_EoverN()